library/src/libqstandarditemmodel.h

typedef struct QBrush QBrush;
typedef struct QDataStream QDataStream;
typedef struct QFont QFont;
typedef struct QIcon QIcon;
typedef struct QModelIndex QModelIndex;
typedef struct QModelRoleDataSpan QModelRoleDataSpan;
typedef struct QSize QSize;
typedef struct QStandardItem QStandardItem;
typedef struct QStandardItemModel QStandardItemModel;
typedef struct QVariant QVariant;
QTLIBC_API QStandardItem* QStandardItem_new();
QTLIBC_API QStandardItem* QStandardItem_new2(libqt_string text);
QTLIBC_API QStandardItem* QStandardItem_new3(QIcon* icon, libqt_string text);
QTLIBC_API QStandardItem* QStandardItem_new4(int rows);
QTLIBC_API QStandardItem* QStandardItem_new5(int rows, int columns);
QTLIBC_API QVariant* QStandardItem_Data(const QStandardItem* self, int role);
QTLIBC_API void QStandardItem_MultiData(const QStandardItem* self, QModelRoleDataSpan* roleDataSpan);
QTLIBC_API void QStandardItem_SetData(QStandardItem* self, QVariant* value, int role);
QTLIBC_API void QStandardItem_ClearData(QStandardItem* self);
QTLIBC_API libqt_string QStandardItem_Text(const QStandardItem* self);
QTLIBC_API void QStandardItem_SetText(QStandardItem* self, libqt_string text);
QTLIBC_API QIcon* QStandardItem_Icon(const QStandardItem* self);
QTLIBC_API void QStandardItem_SetIcon(QStandardItem* self, QIcon* icon);
QTLIBC_API libqt_string QStandardItem_ToolTip(const QStandardItem* self);
QTLIBC_API void QStandardItem_SetToolTip(QStandardItem* self, libqt_string toolTip);
QTLIBC_API libqt_string QStandardItem_StatusTip(const QStandardItem* self);
QTLIBC_API void QStandardItem_SetStatusTip(QStandardItem* self, libqt_string statusTip);
QTLIBC_API libqt_string QStandardItem_WhatsThis(const QStandardItem* self);
QTLIBC_API void QStandardItem_SetWhatsThis(QStandardItem* self, libqt_string whatsThis);
QTLIBC_API QSize* QStandardItem_SizeHint(const QStandardItem* self);
QTLIBC_API void QStandardItem_SetSizeHint(QStandardItem* self, QSize* sizeHint);
QTLIBC_API QFont* QStandardItem_Font(const QStandardItem* self);
QTLIBC_API void QStandardItem_SetFont(QStandardItem* self, QFont* font);
QTLIBC_API int QStandardItem_TextAlignment(const QStandardItem* self);
QTLIBC_API void QStandardItem_SetTextAlignment(QStandardItem* self, int textAlignment);
QTLIBC_API QBrush* QStandardItem_Background(const QStandardItem* self);
QTLIBC_API void QStandardItem_SetBackground(QStandardItem* self, QBrush* brush);
QTLIBC_API QBrush* QStandardItem_Foreground(const QStandardItem* self);
QTLIBC_API void QStandardItem_SetForeground(QStandardItem* self, QBrush* brush);
QTLIBC_API int QStandardItem_CheckState(const QStandardItem* self);
QTLIBC_API void QStandardItem_SetCheckState(QStandardItem* self, int checkState);
QTLIBC_API libqt_string QStandardItem_AccessibleText(const QStandardItem* self);
QTLIBC_API void QStandardItem_SetAccessibleText(QStandardItem* self, libqt_string accessibleText);
QTLIBC_API libqt_string QStandardItem_AccessibleDescription(const QStandardItem* self);
QTLIBC_API void QStandardItem_SetAccessibleDescription(QStandardItem* self, libqt_string accessibleDescription);
QTLIBC_API int QStandardItem_Flags(const QStandardItem* self);
QTLIBC_API void QStandardItem_SetFlags(QStandardItem* self, int flags);
QTLIBC_API bool QStandardItem_IsEnabled(const QStandardItem* self);
QTLIBC_API void QStandardItem_SetEnabled(QStandardItem* self, bool enabled);
QTLIBC_API bool QStandardItem_IsEditable(const QStandardItem* self);
QTLIBC_API void QStandardItem_SetEditable(QStandardItem* self, bool editable);
QTLIBC_API bool QStandardItem_IsSelectable(const QStandardItem* self);
QTLIBC_API void QStandardItem_SetSelectable(QStandardItem* self, bool selectable);
QTLIBC_API bool QStandardItem_IsCheckable(const QStandardItem* self);
QTLIBC_API void QStandardItem_SetCheckable(QStandardItem* self, bool checkable);
QTLIBC_API bool QStandardItem_IsAutoTristate(const QStandardItem* self);
QTLIBC_API void QStandardItem_SetAutoTristate(QStandardItem* self, bool tristate);
QTLIBC_API bool QStandardItem_IsUserTristate(const QStandardItem* self);
QTLIBC_API void QStandardItem_SetUserTristate(QStandardItem* self, bool tristate);
QTLIBC_API bool QStandardItem_IsDragEnabled(const QStandardItem* self);
QTLIBC_API void QStandardItem_SetDragEnabled(QStandardItem* self, bool dragEnabled);
QTLIBC_API bool QStandardItem_IsDropEnabled(const QStandardItem* self);
QTLIBC_API void QStandardItem_SetDropEnabled(QStandardItem* self, bool dropEnabled);
QTLIBC_API QStandardItem* QStandardItem_Parent(const QStandardItem* self);
QTLIBC_API int QStandardItem_Row(const QStandardItem* self);
QTLIBC_API int QStandardItem_Column(const QStandardItem* self);
QTLIBC_API QModelIndex* QStandardItem_Index(const QStandardItem* self);
QTLIBC_API QStandardItemModel* QStandardItem_Model(const QStandardItem* self);
QTLIBC_API int QStandardItem_RowCount(const QStandardItem* self);
QTLIBC_API void QStandardItem_SetRowCount(QStandardItem* self, int rows);
QTLIBC_API int QStandardItem_ColumnCount(const QStandardItem* self);
QTLIBC_API void QStandardItem_SetColumnCount(QStandardItem* self, int columns);
QTLIBC_API bool QStandardItem_HasChildren(const QStandardItem* self);
QTLIBC_API QStandardItem* QStandardItem_Child(const QStandardItem* self, int row);
QTLIBC_API void QStandardItem_SetChild(QStandardItem* self, int row, int column, QStandardItem* item);
QTLIBC_API void QStandardItem_SetChild2(QStandardItem* self, int row, QStandardItem* item);
QTLIBC_API void QStandardItem_InsertRow(QStandardItem* self, int row, libqt_list /* of QStandardItem* */ items);
QTLIBC_API void QStandardItem_InsertColumn(QStandardItem* self, int column, libqt_list /* of QStandardItem* */ items);
QTLIBC_API void QStandardItem_InsertRows(QStandardItem* self, int row, libqt_list /* of QStandardItem* */ items);
QTLIBC_API void QStandardItem_InsertRows2(QStandardItem* self, int row, int count);
QTLIBC_API void QStandardItem_InsertColumns(QStandardItem* self, int column, int count);
QTLIBC_API void QStandardItem_RemoveRow(QStandardItem* self, int row);
QTLIBC_API void QStandardItem_RemoveColumn(QStandardItem* self, int column);
QTLIBC_API void QStandardItem_RemoveRows(QStandardItem* self, int row, int count);
QTLIBC_API void QStandardItem_RemoveColumns(QStandardItem* self, int column, int count);
QTLIBC_API void QStandardItem_AppendRow(QStandardItem* self, libqt_list /* of QStandardItem* */ items);
QTLIBC_API void QStandardItem_AppendRows(QStandardItem* self, libqt_list /* of QStandardItem* */ items);
QTLIBC_API void QStandardItem_AppendColumn(QStandardItem* self, libqt_list /* of QStandardItem* */ items);
QTLIBC_API void QStandardItem_InsertRow2(QStandardItem* self, int row, QStandardItem* item);
QTLIBC_API void QStandardItem_AppendRowWithItem(QStandardItem* self, QStandardItem* item);
QTLIBC_API QStandardItem* QStandardItem_TakeChild(QStandardItem* self, int row);
QTLIBC_API libqt_list /* of QStandardItem* */ QStandardItem_TakeRow(QStandardItem* self, int row);
QTLIBC_API libqt_list /* of QStandardItem* */ QStandardItem_TakeColumn(QStandardItem* self, int column);
QTLIBC_API void QStandardItem_SortChildren(QStandardItem* self, int column);
QTLIBC_API QStandardItem* QStandardItem_Clone(const QStandardItem* self);
QTLIBC_API int QStandardItem_Type(const QStandardItem* self);
QTLIBC_API void QStandardItem_Read(QStandardItem* self, QDataStream* in);
QTLIBC_API void QStandardItem_Write(const QStandardItem* self, QDataStream* out);
QTLIBC_API bool QStandardItem_OperatorLesser(const QStandardItem* self, QStandardItem* other);
QTLIBC_API QStandardItem* QStandardItem_Child2(const QStandardItem* self, int row, int column);
QTLIBC_API QStandardItem* QStandardItem_TakeChild2(QStandardItem* self, int row, int column);
QTLIBC_API void QStandardItem_SortChildren2(QStandardItem* self, int column, int order);
QTLIBC_API void QStandardItem_OperatorAssign(QStandardItem* self, QStandardItem* other);
QTLIBC_API void QStandardItem_EmitDataChanged(QStandardItem* self);